k8s/springboot-login/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-login-service
spec:
  selector:
    app: springboot-login
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
