k8s/springboot-login/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: springboot-login-route
spec:
  to:
    kind: Service
    name: springboot-login-service
  port:
    targetPort: 8080
  tls:
    termination: edge
